# splendor

./: .dockerignore  Cargo.toml  Dockerfile.server  LICENSE  README.md  docker-compose.img.yml  docker-compose.yml  rust-toolchain.toml
book/zh/: book.toml
book/zh/src/: SUMMARY.md  contest-rules.md  intro.md  rules.md
book/zh/src/getting-started/: README.md  sdk.md
book/zh/src/getting-started/sdk/: go.md  py.md  rust.md
core/: Cargo.toml
core/src/: action.rs  actor.rs  cards.rs  colors.rs  lib.rs  nobles.rs  record.rs  snapshot.rs
core/src/actor/: mod.rs  naive_actors.rs
docker/: Dockerfile.chef
engine/: Cargo.toml
engine/src/: action.rs  error.rs  game.rs  lib.rs  nobles.rs  player.rs  tests.rs
engine/src/cards/: defs.rs  mod.rs
example/: Cargo.toml
example/src/: lib.rs
ffi/: Cargo.toml
ffi/src/: lib.rs
proto/: Cargo.toml  build.rs
proto/proto/: controller.proto  supervisor.proto
proto/src/: lib.rs
schema/: BuyCardAction.json  BuyCardSource.json  ColorVec.json  PlayerAction.json  ReserveCardAction.json  TakeTokenAction.json  Tier.json
sdk/: README.md
sdk/go/: Dockerfile  actor.go  go.mod  go.sum
sdk/go/cmd/random_actor/: main.go
sdk/go/pkg/actor/: actor.go
sdk/go/pkg/actor/naive_actors/: random_actor.go
sdk/go/pkg/types/: actions.go  card.go  color.go  errors.go  player.go  snapshot.go  snapshot_test.go  tier.go
sdk/go/types/: actions.go  color.go  noble.go  player.go
sdk/py/: Dockerfile  pyproject.toml  wait-for-server.sh
sdk/py/splendor_actor/: __init__.py  __main__.py
sdk/py/splendor_actor/types/: __init__.py  actions.py  card.py  color.py  noble.py  player.py  snapshot.py  tier.py
sdk/rust/: Cargo.toml  Dockerfile  wait-for-server.sh
sdk/rust/examples/: random_actor.rs
sdk/rust/src/: lib.rs
server/: Cargo.toml  Dockerfile  README.md
server/src/: actor.rs  error.rs  main.rs
server/src/supervisor/: disable.rs  enable.rs  mod.rs
splendor_core/: all.html  constant.MAX_PLAYERS.html  enum.ActionType.html  enum.BuyCardSource.html  enum.CardView.html  enum.Color.html  enum.PlayerAction.html  enum.Record.html  enum.TakeTokenAction.html  enum.Tier.html  index.html  sidebar-items.js  struct.ActionRecord.html  struct.ActionRequest.html  struct.ActorError.html  struct.BuyCardAction.html  struct.Card.html  struct.CardPoolSnapshot.html  struct.ColorIter.html  struct.ColorVec.html  struct.DevelopmentCards.html  struct.DropTokensAction.html  struct.GameSnapshot.html  struct.Noble.html  struct.PlayerSnapshot.html  struct.ReserveCardAction.html  struct.ReservedCard.html  struct.SelectNoblesAction.html  struct.TierIter.html  trait.PlayerActor.html
splendor_core/action/: enum.ActionType.html  enum.BuyCardSource.html  enum.PlayerAction.html  enum.TakeTokenAction.html  struct.BuyCardAction.html  struct.DropTokensAction.html  struct.ReserveCardAction.html  struct.SelectNoblesAction.html
splendor_core/actor/: struct.ActionRequest.html  struct.ActorError.html  trait.PlayerActor.html
splendor_core/cards/: enum.CardView.html  enum.Tier.html  struct.Card.html  struct.DevelopmentCards.html  struct.ReservedCard.html  struct.TierIter.html
splendor_core/colors/: enum.Color.html  struct.ColorIter.html  struct.ColorVec.html
splendor_core/nobles/: struct.Noble.html
splendor_core/record/: enum.Record.html  struct.ActionRecord.html
splendor_core/snapshot/: struct.CardPoolSnapshot.html  struct.GameSnapshot.html  struct.PlayerSnapshot.html
splendor_engine/: all.html  index.html  sidebar-items.js  struct.GameContext.html
splendor_engine/game/: struct.GameContext.html
splendor_proto/: all.html  index.html  sidebar-items.js
splendor_proto/controller/: index.html  sidebar-items.js  struct.CreateGameRequest.html  struct.CreateGameResponse.html  struct.StartGameRequest.html
splendor_proto/controller/controller_client/: index.html  struct.ControllerClient.html
splendor_proto/controller/controller_server/: index.html  sidebar-items.js  struct.ControllerServer.html  trait.Controller.html
splendor_proto/supervisor/: index.html  sidebar-items.js  struct.GameEndsMessage.html  struct.GameStartsMessage.html  struct.PreparePlayerChangeMessage.html
splendor_proto/supervisor/game_ends_message/: enum.EndReason.html  index.html  sidebar-items.js
splendor_proto/supervisor/supervisor_client/: index.html  sidebar-items.js  struct.SupervisorClient.html
splendor_proto/supervisor/supervisor_server/: index.html  sidebar-items.js  struct.SupervisorServer.html  trait.Supervisor.html
splendor_sdk/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.WebSocketActorClient.html
splendor_server/: all.html  fn.accept_connection.html  fn.gen_secrets.html  fn.main.html  fn.start_server.html  fn.write_secrets.html  index.html  sidebar-items.js
splendor_server/actor/: index.html  sidebar-items.js  struct.WebSocketActor.html
splendor_server/error/: enum.ClientError.html  index.html
splendor_server/supervisor/: enum.SupervisorError.html  index.html  sidebar-items.js
splendor_server/supervisor/disable/: index.html  sidebar-items.js  struct.Supervisor.html
splendor_server/utils/: index.html
splendor_supervisor/: all.html  fn.main.html  index.html  sidebar-items.js  struct.GameController.html
splendor_supervisor/instance/: index.html  sidebar-items.js  struct.GameInstance.html
supervisor/: Cargo.toml  Dockerfile  supervisord.sh
supervisor/src/: instance.rs  main.rs
ws/: Cargo.toml
ws/src/: lib.rs
zh/: 404.html  contest-rules.html  intro.html  print.html  rules.html  searchindex.js  searchindex.json
zh/getting-started/: index.html  sdk.html
zh/getting-started/sdk/: go.html  py.html  rust.html
