[workspace]
members = ["core", "engine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
num_enum = "0.7"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "=2.0.0-alpha.3", features = ["serde"] }
splendor-core = { path = "./core" }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
