[workspace]
members = ["core", "engine", "server", "ws"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
log = "0.4"
num_enum = "0.7"
pretty_env_logger = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "=2.0.0-alpha.3", features = ["serde"] }
splendor-core = { path = "./core" }
splendor-engine = { path = "./engine" }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
