[package]
name = "splendor-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
log.workspace = true
num_enum.workspace = true
serde.workspace = true
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true
rand = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
naive_actors = ["rand"]