[package]
name = "splendor-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
rand.workspace = true
serde.workspace = true
smallvec.workspace = true
splendor-core.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
ctor.workspace = true
pretty_env_logger.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
test = ["splendor-core/naive_actors"]
