[tool.poetry]
name = "splendor-actor"
version = "0.1.0"
description = ""
authors = ["lightsing <light.tsing@gmail.com>"]
readme = "README.md"
packages = [{include = "splendor_actor"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
